Update, flesh out process and case studies

--- a/process.html
+++ b/process.html
@@ -37,7 +37,8 @@
 							<a id="about" class="anchorLink"></a><h2>Context</h2>
 						</header>
 						<div class="content">
-							<p>Working as a product designer at VMware requires utilizing a number of different craft skills, processes, and a toolkit of design patterns and best practices. Pivotal Software (acquired by VMware in 2020) championed an incredibly effective process that that I extrapolate from depending on the project or need. This process is called <strong>Discovery and Framing</strong>, often abreviated as <strong>D&F</strong>, and can be represented by the double-diamond timeline diagram below. Discovery and Framing is a pattern used to define what the minimum viable product we want to build, and why. Going through this process is crucial for validating product requirements and assumptions to make sure that everything we build will be exceptionally valuable.</p>
+							<p>Working as a product designer at VMware requires utilizing a number of different craft skills, processes, and a toolkit of design patterns and best practices. Pivotal Software (acquired by VMware in 2020) championed an incredibly effective process that can be adapted to suit any project or need. This process is called <strong>Discovery and Framing</strong> (often abreviated as <strong>D&F</strong>) and can be represented by the double-diamond timeline diagram below.</p>
+							<p>Discovery and Framing is a pattern used to define what the minimum viable product we want to build, and why. Going through this process is crucial for validating product requirements and assumptions to make sure that everything we build will be exceptionally valuable.</p>
 							<div class="gallery">
 								<a href="images/process-dnf-full.png" class="full fit"><img src="images/process-dnf-thumb.jpg" alt="" /></a>
 							</div>
@@ -63,6 +64,7 @@
 							<p>This stage involves open-ended research, workshops, interviews and any exploration needed to discover what the problem is. I'll usually includes a selection the following activities/workshops, depending on the initiative:</p>
 							<img width="600" src="images/process-dnf-photo-full.jpg" class="portrait left floatRight" alt="" />
 							<ul>
+								<li>Journey mapping and Value Stream mapping</li>
 								<li>Stakeholder mapping workshops</li>
 								<li>Assumptions workshop</li>
 								<li>Research plan development</li>
@@ -106,8 +108,14 @@
 							<h2>Design Studios</h2>
 						</header>
 						<div class="content">
+							<div class="gallery floatRight">
+								<a href="images/metrics_design-studio-full.jpg">
+									<img src="images/metrics_design-studio-thumb.jpg" />
+								</a>
+								<span>Sketch iterations from a design studio exploring different methods for integrating metrics and statistics into a product dashboard.</span>
+							</div>
 							<p>A Design Studio is a group sketching exercise that is used to help crowdsource visual ideas. The method provides a simple and effective way to generate many divergent ideas, converge on the strongest facets of each, and leave the meeting with a rich set of artifacts (drawings, in this case) to be developed into wireframes or user stories.</p>
-							<p>Once we've validated our research, have a well developed persona or protopersona, and have prioritized a problem to solve, I schedule a design studio to generate a number of solutions from a number of perspectives in a short amount of time. The exercise is self-documenting, creating sketch artifacts that can be annotated and used to generate wireframes or mockups for prototyping purposes.
+							<p>Once we have validated our research, have a well developed spectrum of personas, and have prioritized a problem to solve, a design studio can generate a number of solutions from a number of perspectives in a short amount of time. The exercise is self-documenting, creating sketch artifacts that can be annotated and used to generate wireframes or mockups for prototyping purposes.
 							<p>Inviting the right stakeholders helps to create buy-in from the very early stages of a project. By participating in the process of generating ideas together, the attendees develop a deep understanding of the rationale behind different approaches later in an product or feature's development.</p>
 							<p>The specific methods and agenda can vary depending on the problem being tackled. Learn more by reading <a href="https://www.nngroup.com/articles/facilitating-design-studio-workshop/" target="_blank">Nielsen Norman's guide to facilitating Design Studios</a>.</p>
 						</div>
@@ -118,7 +126,7 @@
 							<a id="contact" class="anchorLink"></a><h2>Learn More</h2>
 						</header>
 						<div class="content">
-							There's a lot more to the design process at VMware. If you're interested in learning more, check out http://vmware.design/, or the design team's Medium blog: https://medium.com/vmwaredesign</a>.
+							There's a lot more to the design process at VMware. If you're interested in learning more, check out <a href="http://vmware.design/" target="_blank">http://vmware.design/</a>, or the design team's Medium blog: <a href="https://medium.com/vmwaredesign" target="_blank">https://medium.com/vmwaredesign</a>.
 						</div>
 						<footer>
 							<ul class="items">
