--- a/fastboard.html
+++ b/fastboard.html
@@ -36,9 +36,11 @@
 							<a id="about" class="anchorLink"></a><h2>Context</h2>
 						</header>
 						<div class="content">
-							<div class="floatRight narrow">
-								<img src="images/fastboard_tesla.jpg" alt="" />
-								<span>Concourse CI deploying Cloud Foundry from a Tesla's main dashboard display. 🤯 (<a href="https://twitter.com/alekssaul/status/1091465468366462977?s=20" target="_blank">source</a>)</span>
+							<div class="floatRight narrow gallery">
+								<a href="https://twitter.com/alekssaul/status/1091465468366462977?s=20" target="_blank">
+									<img src="images/fastboard_tesla.jpg" alt="" />
+									<span>Concourse CI deploying Cloud Foundry from a Tesla's main dashboard display. 🤯 </span>
+								</a>
 							</div>
 
 							<p><a href="https://tanzu.vmware.com/concourse">Concourse CI</a> is a cloud-native, container-first, platform-agnostic tool lovingly crafted to serve the automation needs of developers the world over. The product lets engineers and businesses create automation pipelines that perform tasks in series and sequence, often with one pipeline triggering another based on its success or failure. Companies the world over have created pipelines for virtually everything that can be automated. We've seen pipelines for <strong>automatically scaling infrastructure around the globe to handle massive Black Friday sales</strong> running alongside pipelines for <strong>automatically ordering pizza for the office every Friday night</strong> in the same deployment.</p>
