--- a/index.html
+++ b/index.html
@@ -29,20 +29,25 @@
 							</ul>
 						</header>
 						<div class="blue">
-							<img src="images/thoughtworks.png" alt="" />
+							<img src="images/main_persona_crop.jpg" alt="" />
+							<span>A participant in a Pivotal Software design studio</span>
 						</div>
 					</section>
 
 				<!-- Section -->
 					<section id="first">
 						<header>
-							<a id="about" class="anchorLink"></a><h2>Product Design</h2>
+							<a id="about" class="anchorLink"></a><h2>About</h2>
 						</header>
 						<div class="content">
-							<p><strong>I'm an experienced product designer and researcher with a demonstrated history of user-centric work on cross-disciplinary teams developing B2B and B2C SAAS products.</strong></p>
-							<p>I'm currently working as a design lead in the Applications Operations program at <strong><a href="https://vmware.com">VMware Inc.</a></strong> My company streamlines the journey for enterprises around the world to become fully modern, secure, and compliant digital businesses that can deliver better experiences to their customers, and empower employees to do their best work faster than ever before.</p>
-							<p>My work focuses on the enterprise customer experience of delivering cloud-native software that enables infrastructure-as-a-service, continuous integration and continuous delivery, and a world-class developer experience for the world's most powerful companies. Within my company and my industry, I'm also passionate about facilitation practice, open source community, design systems, diversity and inclusion, and accessibility.</p>
-							<!-- <span class="image main"><img src="images/pic02.jpg" alt="" /></span> -->
+							<p><strong>I'm an experienced product designer and researcher with a demonstrated history of user-centric work on cross-disciplinary teams developing enterprise, B2B and B2C SAAS products.</strong></p>
+							<p>I'm currently working at <strong><a href="https://vmware.com" target="_blank">VMware Inc.</a></strong> as <strong>Design Lead for the Application Operations program</strong>; the backbone of the <a href="https://tanzu.vmware.com/tanzu" target="_blank">VMware Tanzu portfolio</a> of projects.</p>
+							<a href="#" data-target="js_about" class="button large">Read More About Me</a>
+							<div class="about_more">
+								<p>My company streamlines the journey for enterprises around the world to become fully modern, secure, and compliant digital businesses that can deliver better experiences to their customers, and empower employees to do their best work faster than ever before.</p>
+								<p>I'm focused on the enterprise customer experience of delivering cloud-native software that enables infrastructure-as-a-service, continuous integration and continuous delivery, and a world-class developer experience for the world's most powerful companies.
+								<p><strong>Within my company and my industry, I'm also passionate about facilitation practice, open source community, design systems, diversity and inclusion, and accessibility.</strong></p>
+							</div>
 						</div>
 					</section>
 
@@ -54,7 +59,7 @@
 						<div class="content">
 							<p>Take a quick tour of the methods, cross-disciplinary team dynamic, collaborative workshops, and tech stack that I use to engage users, identify and validate product value, prioritize work, and design products that increase revenue and delight customers at the same time.</p>
 							<ul class="actions">
-								<li><a href="process.html" class="button large">Learn More</a></li>
+								<li><a href="process.html" class="button large">Learn More About The Process</a></li>
 							</ul>
 						</div>
 					</section>
@@ -85,7 +90,8 @@
 							<a id="casestudies" class="anchorLink"></a><h2>Case Studies</h2>
 						</header>
 						<div class="content">
-							<p>Choose from a small selection of products, initiatives, or features I've worked on to learn more about my design process:</p>
+							<p><strong>For a full portfolio presentation,</strong> including information on my current initiatives and projects that cannot be displayed publically for confidentiality purposes, <strong>please get in touch directly at <a href="mailto:mail@matthewpereira.com">mail@matthewpereira.com</a>.</strong></p>
+							<p>Below you can view a small selection of case studies I've worked on to learn more about my design process:</p>
 
 							<!-- Section -->
 								<section>
@@ -109,7 +115,7 @@
 								</section>
 
 							<!-- Section -->
-								<section>
+								<!-- <section>
 									<header>
 										<h3><a href="fastboard.html">Concourse CI: Favorite Pipelines</a></h3>
 										<p>A design initiative focused on saving platform operators and engineers time, and reducing the number of repetitive tasks involved in day to day development and operation.</p>
@@ -127,7 +133,7 @@
 											<a href="fastboard.html" class="landscape left"><img src="images/fastboard-full.png" alt="" /></a>
 										</div>
 									</div>
-								</section>
+								</section> -->
 
 							<!-- Section -->
 								<section>
@@ -151,274 +157,6 @@
 
 							</div>
 					</section>
-
-				<!-- Elements -->
-				<!--
-					<section>
-						<header>
-							<h2>Elements</h2>
-						</header>
-						<div class="content">
-
-							<section>
-								<header>
-									<h3>Text</h3>
-								</header>
-								<div class="content">
-									<p>This is <b>bold</b> and this is <strong>strong</strong>. This is <i>italic</i> and this is <em>emphasized</em>.
-									This is <sup>superscript</sup> text and this is <sub>subscript</sub> text.
-									This is <u>underlined</u> and this is code: <code>for (;;) { ... }</code>. Finally, <a href="#">this is a link</a>.</p>
-									<hr />
-									<h2>Heading Level 2</h2>
-									<h3>Heading Level 3</h3>
-									<h4>Heading Level 4</h4>
-									<h5>Heading Level 5</h5>
-									<hr />
-									<h5>Blockquote</h5>
-									<blockquote>Fringilla nisl. Donec accumsan interdum nisi, quis tincidunt felis sagittis eget tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan faucibus. Vestibulum ante ipsum primis in faucibus lorem ipsum dolor sit amet nullam adipiscing eu felis.</blockquote>
-									<h5>Preformatted</h5>
-									<pre><code>i = 0;
-
-while (!deck.isInOrder()) {
-  print 'Iteration ' + i;
-  deck.shuffle();
-  i++;
-}
-
-print 'Sorted in ' + i + ' iterations.';</code></pre>
-								</div>
-							</section>
-
-							<section>
-								<header>
-									<h3>Lists</h3>
-								</header>
-								<div class="content">
-
-									<h4>Unordered</h4>
-									<ul>
-										<li>Dolor pulvinar etiam.</li>
-										<li>Sagittis adipiscing.</li>
-										<li>Felis enim feugiat.</li>
-									</ul>
-
-									<h4>Alternate</h4>
-									<ul class="alt">
-										<li>Dolor pulvinar etiam.</li>
-										<li>Sagittis adipiscing.</li>
-										<li>Felis enim feugiat.</li>
-									</ul>
-
-									<h4>Ordered</h4>
-									<ol>
-										<li>Dolor pulvinar etiam.</li>
-										<li>Etiam vel felis viverra.</li>
-										<li>Felis enim feugiat.</li>
-										<li>Dolor pulvinar etiam.</li>
-										<li>Etiam vel felis lorem.</li>
-										<li>Felis enim et feugiat.</li>
-									</ol>
-									<h4>Icons</h4>
-									<ul class="icons">
-										<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-										<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-										<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-										<li><a href="#" class="icon brands fa-github"><span class="label">Github</span></a></li>
-									</ul>
-
-									<h4>Actions</h4>
-									<ul class="actions">
-										<li><a href="#" class="button primary">Default</a></li>
-										<li><a href="#" class="button">Default</a></li>
-									</ul>
-									<ul class="actions stacked">
-										<li><a href="#" class="button primary">Default</a></li>
-										<li><a href="#" class="button">Default</a></li>
-									</ul>
-								</div>
-							</section>
-
-							<section>
-								<header>
-									<h3>Table</h3>
-								</header>
-								<div class="content">
-									<h4>Default</h4>
-									<div class="table-wrapper">
-										<table>
-											<thead>
-												<tr>
-													<th>Name</th>
-													<th>Description</th>
-													<th>Price</th>
-												</tr>
-											</thead>
-											<tbody>
-												<tr>
-													<td>Item One</td>
-													<td>Ante turpis integer aliquet porttitor.</td>
-													<td>29.99</td>
-												</tr>
-												<tr>
-													<td>Item Two</td>
-													<td>Vis ac commodo adipiscing arcu aliquet.</td>
-													<td>19.99</td>
-												</tr>
-												<tr>
-													<td>Item Three</td>
-													<td> Morbi faucibus arcu accumsan lorem.</td>
-													<td>29.99</td>
-												</tr>
-												<tr>
-													<td>Item Four</td>
-													<td>Vitae integer tempus condimentum.</td>
-													<td>19.99</td>
-												</tr>
-												<tr>
-													<td>Item Five</td>
-													<td>Ante turpis integer aliquet porttitor.</td>
-													<td>29.99</td>
-												</tr>
-											</tbody>
-											<tfoot>
-												<tr>
-													<td colspan="2"></td>
-													<td>100.00</td>
-												</tr>
-											</tfoot>
-										</table>
-									</div>
-
-									<h4>Alternate</h4>
-									<div class="table-wrapper">
-										<table class="alt">
-											<thead>
-												<tr>
-													<th>Name</th>
-													<th>Description</th>
-													<th>Price</th>
-												</tr>
-											</thead>
-											<tbody>
-												<tr>
-													<td>Item One</td>
-													<td>Ante turpis integer aliquet porttitor.</td>
-													<td>29.99</td>
-												</tr>
-												<tr>
-													<td>Item Two</td>
-													<td>Vis ac commodo adipiscing arcu aliquet.</td>
-													<td>19.99</td>
-												</tr>
-												<tr>
-													<td>Item Three</td>
-													<td> Morbi faucibus arcu accumsan lorem.</td>
-													<td>29.99</td>
-												</tr>
-												<tr>
-													<td>Item Four</td>
-													<td>Vitae integer tempus condimentum.</td>
-													<td>19.99</td>
-												</tr>
-												<tr>
-													<td>Item Five</td>
-													<td>Ante turpis integer aliquet porttitor.</td>
-													<td>29.99</td>
-												</tr>
-											</tbody>
-											<tfoot>
-												<tr>
-													<td colspan="2"></td>
-													<td>100.00</td>
-												</tr>
-											</tfoot>
-										</table>
-									</div>
-								</div>
-							</section>
-
-							<section>
-								<header>
-									<h3>Buttons</h3>
-								</header>
-								<div class="content">
-									<ul class="actions">
-										<li><a href="#" class="button primary">Primary</a></li>
-										<li><a href="#" class="button">Default</a></li>
-									</ul>
-									<ul class="actions">
-										<li><a href="#" class="button large">Large</a></li>
-										<li><a href="#" class="button">Default</a></li>
-										<li><a href="#" class="button small">Small</a></li>
-									</ul>
-									<ul class="actions">
-										<li><a href="#" class="button primary icon solid fa-download">Icon</a></li>
-										<li><a href="#" class="button icon solid fa-download">Icon</a></li>
-									</ul>
-									<ul class="actions">
-										<li><span class="button primary disabled">Disabled</span></li>
-										<li><span class="button disabled">Disabled</span></li>
-									</ul>
-								</div>
-							</section>
-
-							<section>
-								<header>
-									<h3>Form</h3>
-								</header>
-								<div class="content">
-									<form method="post" action="#">
-										<div class="fields">
-											<div class="field half">
-												<label for="demo-name">Name</label>
-												<input type="text" name="demo-name" id="demo-name" value="" placeholder="Jane Doe" />
-											</div>
-											<div class="field half">
-												<label for="demo-email">Email</label>
-												<input type="email" name="demo-email" id="demo-email" value="" placeholder="jane@untitled.tld" />
-											</div>
-											<div class="field">
-												<label for="demo-category">Category</label>
-												<select name="demo-category" id="demo-category">
-													<option value="">-</option>
-													<option value="1">Manufacturing</option>
-													<option value="1">Shipping</option>
-													<option value="1">Administration</option>
-													<option value="1">Human Resources</option>
-												</select>
-											</div>
-											<div class="field half">
-												<input type="radio" id="demo-priority-low" name="demo-priority" checked>
-												<label for="demo-priority-low">Low</label>
-											</div>
-											<div class="field half">
-												<input type="radio" id="demo-priority-high" name="demo-priority">
-												<label for="demo-priority-high">High</label>
-											</div>
-											<div class="field half">
-												<input type="checkbox" id="demo-copy" name="demo-copy">
-												<label for="demo-copy">Email me a copy</label>
-											</div>
-											<div class="field half">
-												<input type="checkbox" id="demo-human" name="demo-human" checked>
-												<label for="demo-human">Not a robot</label>
-											</div>
-											<div class="field">
-												<label for="demo-message">Message</label>
-												<textarea name="demo-message" id="demo-message" placeholder="Enter your message" rows="6"></textarea>
-											</div>
-										</div>
-										<ul class="actions">
-											<li><input type="submit" value="Send Message" class="primary" /></li>
-											<li><input type="reset" value="Reset" /></li>
-										</ul>
-									</form>
-								</div>
-							</section>
-
-						</div>
-					</section>
-				-->
 
 				<!-- Section -->
 					<section>
