Add favicon, linkedin link

--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
 							<a id="contact" class="anchorLink"></a><h2>Get in touch</h2>
 						</header>
 						<div class="content">
-							<p>Use this form to send me a message, or visit my LinkedIn profile to learn more about my work history.</p>
+							<p>Use this form to send me a message, or <a href="https://www.linkedin.com/in/matthewpereira/" target="_blank">visit my LinkedIn profile</a> to learn more about my work history.</p>
 							
 							<form class="kwes-form" action="https://kwes.io/api/foreign/forms/R11LZh3NxaNjxI2ddPHO"> 
 								<div class="fields">
