Update hero caption

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 						</header>
 						<div class="blue">
 							<img src="images/main_persona_crop.jpg" alt="" />
-							<span>A participant in a Pivotal Software design studio</span>
+							<span>A participant in a Pivotal Software persona generation workshop</span>
 						</div>
 					</section>
 
