Revise conversations/process/fastboard

--- a/process.html
+++ b/process.html
@@ -126,7 +126,7 @@
 							<a id="contact" class="anchorLink"></a><h2>Learn More</h2>
 						</header>
 						<div class="content">
-							There's a lot more to the design process at VMware. If you're interested in learning more, check out <a href="http://vmware.design/" target="_blank">http://vmware.design/</a>, or the design team's Medium blog: <a href="https://medium.com/vmwaredesign" target="_blank">https://medium.com/vmwaredesign</a>.
+							<strong>There's a lot more to the design process at VMware.</strong> If you're interested in learning more, check out <a href="http://vmware.design/" target="_blank">http://vmware.design/</a>, or the design team's Medium blog: <a href="https://medium.com/vmwaredesign" target="_blank">https://medium.com/vmwaredesign</a>.
 						</div>
 						<footer>
 							<ul class="items">
