Sticky menus, subnav on fastboard

--- a/fastboard.html
+++ b/fastboard.html
@@ -18,9 +18,13 @@
 					<section class="intro">
 						<header>
 							<h1><a href="index.html">Matthew Pereira</a></h1>
-							<p>Case Study:<br><strong>Superpowered Web UI for Concourse</strong> </p>
-							<ul class="actions">
-								<li><a href="#first" class="arrow scrolly"><span class="label">Next</span></a></li>
+							<p>Case Study:<br><strong>Superpowered Concourse Web UI</strong></p>
+							<ul class="subnav">
+								<li><em>Navigate:</em> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="#context">Context</a></li>
+								<li><a href="#discovery">Discovery</a></li>
+								<li><a href="#problem">Framing</a></li>
+								<li><a href="#solutions">Solutions</a></li>
+								<li><a href="#outcomes">Outcomes</a></li>
 							</ul>
 						</header>
 						<div class="content">
@@ -33,7 +37,7 @@
 				<!-- Section -->
 					<section id="first">
 						<header>
-							<a id="about" class="anchorLink"></a><h2>Context</h2>
+							<a id="context" class="anchorLink"></a><h2>Context</h2>
 						</header>
 						<div class="content">
 							<div class="floatRight narrow gallery">
@@ -55,7 +59,7 @@
 					<!-- Section -->
 					<section>
 						<header>
-							<h2>Discovery</h2>
+							<a id="discovery" class="anchorLink"></a><h2>Discovery</h2>
 						</header>
 						<div class="content">
 							<p>The Concourse team interacts with its open source community and customer-base on a daily basis, collecting and cataloging feedback. This research initiative originated because our 2019 customer and community surveying efforts revealed that performance was one of the top pain points for our users. No matter how good a product is, users will want it to perform better. However, 'performance' can mean more than just one thing to different groups of users.</p>
@@ -76,7 +80,7 @@
 					<!-- Section -->
 					<section>
 						<header>
-							<h2>Problem Definition and Framing</h2>
+							<a id="problem" class="anchorLink"></a><h2>Problem Definition and Framing</h2>
 						</header>
 						<div class="content">
 							<p>Starting with teams in our company who use Concourse as part of their path to production, then reaching out to key customers, and then to open source users running mission-critical Concourse installations, we sought to validate four key performance issues that had been reported:</p>
@@ -112,7 +116,7 @@
 					<!-- Section -->
 					<section>
 						<header>
-							<h2>Solutions</h2>
+							<a id="solutions" class="anchorLink"></a><h2>Solutions</h2>
 						</header>
 						<div class="content">
 							<p>Working with what we knew from our research, the team and I were able to replicate the problems our users were experiencing, and then able to determine root causes for each of the performance issues. With the input of the team to help balance business, technical, and user needs, we came up with strategies for alleviating each problem.</p>
@@ -172,7 +176,7 @@
 					<!-- Section -->
 					<section>
 						<header>
-							<h2>Results & Outcome</h2>
+							<a id="outcomes" class="anchorLink"></a><h2>Results & Outcomes</h2>
 						</header>
 						<div class="content">
 							<p>Throughout the initiative we were using a number of different systems to track a baseline for each scenario, and to measure our results - Concourse installations provisioned using virtual infrastructure on GCP and vSphere as well as on-premise hardware in our office. We also tested a number of different configurations to mimic Concourse installations of different scales - many pipelines, few pipelines, pipelines of varying compute requirements, and with different amounts of build histories - in order to get a comprehensive look at how our proposed solutions would affect a wide spectrum of users.</p>
