Add images, headshot, update case studies

--- a/index.html
+++ b/index.html
@@ -29,9 +29,19 @@
 								<li><a href="#first" class="arrow scrolly"><span class="label">Next</span></a></li>
 							</ul>
 						</header>
-						<div class="blue">
-							<img src="images/main_persona_crop.jpg" alt="" />
-							<span>A participant in a Pivotal Software persona generation workshop</span>
+						<div class="heroArea cycle-slideshow" data-cycle-slides="div">
+							<div>
+								<img src="images/concourse_workshop.jpg" alt="" />
+								<span>Matthew, hosting a CI/CD workshop w/ the Concourse team + special guests at Spring 1 Platform in Austin, TX, 2019</span>
+							</div>
+							<div>
+								<img src="images/main_persona_crop.jpg" alt="" />
+								<span>A participant in a Pivotal Software persona generation workshop</span>
+							</div>
+							<div>
+								<img src="images/concourse_apple_watch.jpg" alt="" />
+								<span>An engineer testing Concourse CI on their Apple Watch</span>
+							</div>
 						</div>
 					</section>
 
@@ -41,13 +51,19 @@
 							<a id="about" class="anchorLink"></a><h2>About</h2>
 						</header>
 						<div class="content">
-							<p><strong>I'm an experienced product designer and researcher with a demonstrated history of user-centric work on cross-disciplinary teams developing enterprise, B2B and B2C SAAS products.</strong></p>
-							<p>I'm currently working at <strong><a href="https://vmware.com" target="_blank">VMware Inc.</a></strong> as <strong>Design Lead for the Application Operations program</strong>; the backbone of the <a href="https://tanzu.vmware.com/tanzu" target="_blank">VMware Tanzu portfolio</a> of projects.</p>
+							<div class="headshot">
+								<img src="images/headshot.jpg" />
+								<!-- <span>Working from home, 2021.</span>  -->
+							</div>
+							<blockquote>I'm a product designer, researcher, and facilitator living in Toronto, Canada.</blockquote>
+							<br>
+							<p>I have a demonstrated history of user-centric design work on enterprise, B2B and B2C SAAS products, and I love working with multi-disciplinary teams. I've solved problems for companies ranging from small businesses to tech startups to some of the biggest and most demanding organizations on the planet.</p>
+							<p>I'm currently working at <strong><a href="https://vmware.com" target="_blank">VMware Inc.</a></strong> as <strong>Design Lead for the Application Operations program</strong>; the DevSecOps backbone of the <a href="https://tanzu.vmware.com/tanzu" target="_blank">VMware Tanzu portfolio</a> of projects.</p>
 							<a href="#" data-target="js_about" class="button large">Read More About Me</a>
 							<div class="about_more">
-								<p>My company streamlines the journey for enterprises around the world to become fully modern, secure, and compliant digital businesses that can deliver better experiences to their customers, and empower employees to do their best work faster than ever before.</p>
+								<p>My company's vision is to streamline. the journey for enterprises around the world to become fully modern, secure, and compliant digital businesses. By revolutionizing  software development across the infrastructure, platform, operator, and developer levels, our customers can deliver better experiences to their customers, and empower employees to do their best work faster than ever before.</p>
 								<p>I'm focused on the enterprise customer experience of delivering cloud-native software that enables infrastructure-as-a-service, continuous integration and continuous delivery, and a world-class developer experience for the world's most powerful companies.
-								<p><strong>Within my company and my industry, I'm also passionate about facilitation practice, open source community, design systems, diversity and inclusion, and accessibility.</strong></p>
+								<p><strong>Within my company and the broader tech industry, I'm also passionate about facilitation practice, open source community development, design systems, diversity and inclusion, and accessibility.</strong></p>
 							</div>
 						</div>
 					</section>
@@ -209,6 +225,7 @@
 		<!-- Scripts -->
 			<script src="assets/js/jquery.min.js"></script>
 			<script src="assets/js/jquery.scrolly.min.js"></script>
+			<script src="assets/js/jquery.cycle2.min.js"></script>
 			<script src="assets/js/browser.min.js"></script>
 			<script src="assets/js/breakpoints.min.js"></script>
 			<script src="assets/js/util.js"></script>
