--- a/process.html
+++ b/process.html
@@ -19,8 +19,11 @@
 						<header>
 							<h1><a href="index.html">Matthew Pereira</a></h1>
 							<p>Learn More:<br><strong>Design Process</strong> </p>
-							<ul class="actions">
-								<li><a href="#first" class="arrow scrolly"><span class="label">Next</span></a></li>
+							<ul class="subnav">
+								<li><em>Navigate:</em> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="#context" class="scrolly">Context</a></li>
+								<li><a href="#discovery" class="scrolly">Discovery</a></li>
+								<li><a href="#framing" class="scrolly">Framing</a></li>
+								<li><a href="#designstudio" class="scrolly">Design Studios</a></li>
 							</ul>
 						</header>
 						<div class="content">
@@ -57,7 +60,7 @@
 					<!-- Section -->
 					<section>
 						<header>
-							<h2>Discovery</h2>
+							<a id="discovery" class="anchorLink"></a><h2>Discovery</h2>
 						</header>
 						<div class="content">
 							<p>Discovery is where the team collaborates with key stakeholders in the company, subject matter experts, open source users, and customers (or customer proxies like Sales Engineers and Solution Architects in some cases) to determine what problem it is we're trying to solve. Sometimes we have a clear opportunity to investigate based on integration with aligned products, industry trends, or survey feedback. Other times, we might want to start with outreach to better understand what our users are going through, and how our software can help.</p>
@@ -79,7 +82,7 @@
 					<!-- Section -->
 					<section>
 						<header>
-							<h2>Framing</h2>
+							<a id="framing" class="anchorLink"></a><h2>Framing</h2>
 						</header>
 						<div class="content">
 							<p>Framing is establishing how to solve the problem. During this stage, the team is focused on researching and validating their ideas. In addition to curating and facilitating this process, my role is to advocate for the user experience and push back against solutions that sacrifice too much for the sake of business value or technical simplicity. My job is to make sure that whatever solution the team agrees upon is one that the end user is going to love.</p>
@@ -105,7 +108,7 @@
 					<!-- Section -->
 					<section>
 						<header>
-							<h2>Design Studios</h2>
+							<a id="designstudio" class="anchorLink"></a><h2>Design Studios</h2>
 						</header>
 						<div class="content">
 							<div class="gallery floatRight">
