--- a/fastboard.html
+++ b/fastboard.html
@@ -20,11 +20,11 @@
 							<h1><a href="index.html">Matthew Pereira</a></h1>
 							<p>Case Study:<br><strong>Superpowered Concourse Web UI</strong></p>
 							<ul class="subnav">
-								<li><em>Navigate:</em> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="#context">Context</a></li>
-								<li><a href="#discovery">Discovery</a></li>
-								<li><a href="#problem">Framing</a></li>
-								<li><a href="#solutions">Solutions</a></li>
-								<li><a href="#outcomes">Outcomes</a></li>
+								<li><em>Navigate:</em> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="#context" class="scrolly">Context</a></li>
+								<li><a href="#discovery" class="scrolly">Discovery</a></li>
+								<li><a href="#problem" class="scrolly">Framing</a></li>
+								<li><a href="#solutions" class="scrolly">Solutions</a></li>
+								<li><a href="#outcomes" class="scrolly">Outcomes</a></li>
 							</ul>
 						</header>
 						<div class="content">
