Typo on homepage

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 							<p>I'm currently working at <strong><a href="https://vmware.com" target="_blank">VMware Inc.</a></strong> as <strong>Design Lead for the Application Operations program</strong>; the DevSecOps backbone of the <a href="https://tanzu.vmware.com/tanzu" target="_blank">VMware Tanzu portfolio</a> of projects.</p>
 							<a href="#" data-target="js_about" class="button large">Read More About Me</a>
 							<div class="about_more">
-								<p>My company's vision is to streamline. the journey for enterprises around the world to become fully modern, secure, and compliant digital businesses. By revolutionizing  software development across the infrastructure, platform, operator, and developer levels, our customers can deliver better experiences to their customers, and empower employees to do their best work faster than ever before.</p>
+								<p>My company's vision is to streamline the journey for enterprises around the world so that they can become fully modern, secure, and compliant digital businesses. By revolutionizing software development across the infrastructure, platform, operator, and developer levels, our customers can deliver better experiences to their customers, and empower employees to do their best work faster than ever before.</p>
 								<p>I'm focused on the enterprise customer experience of delivering cloud-native software that enables infrastructure-as-a-service, continuous integration and continuous delivery, and a world-class developer experience for the world's most powerful companies.
 								<p><strong>Within my company and the broader tech industry, I'm also passionate about facilitation practice, open source community development, design systems, diversity and inclusion, and accessibility.</strong></p>
 							</div>
