New additions to home page

--- a/index.html
+++ b/index.html
@@ -31,16 +31,24 @@
 						</header>
 						<div class="heroArea cycle-slideshow" data-cycle-slides="div">
 							<div>
-								<img src="images/concourse_workshop.jpg" alt="" />
-								<span>Matthew, hosting a CI/CD workshop w/ the Concourse team + special guests at Spring 1 Platform in Austin, TX, 2019</span>
+								<img src="images/concourse_workshop.jpg" alt="An image of the Concourse development team in a conference workshop space" />
+								<span>Matthew hosting a CI/CD workshop w/ Concourse team + special guests at SpringOne Platform in Austin, TX, 2019</span>
 							</div>
 							<div>
-								<img src="images/main_persona_crop.jpg" alt="" />
-								<span>A participant in a Pivotal Software persona generation workshop</span>
+								<img src="images/main_persona_crop.jpg" alt="A woman writing on a paper persona mockup during a workshop" />
+								<span>A participant in a Pivotal Software persona generation workshop in San Francisco, CA, 2019</span>
 							</div>
 							<div>
-								<img src="images/concourse_apple_watch.jpg" alt="" />
-								<span>An engineer testing Concourse CI on their Apple Watch</span>
+								<img src="images/conversations-patent-full.png" alt="A series of sharpie-fidelity mockups depicting key differentiating features on a patent application." />
+								<span>Patent diagrams for Statflo 1:1 Conversations, 2018</span>
+							</div>
+							<div>
+								<img src="images/design-studio.jpg" alt="Matthew holding up a sharpie UI feature drawing over Zoom during a design studio" />
+								<span>Remote design studio facilitation during the first weeks of COVID, 2020</span>
+							</div>
+							<div>
+								<img src="images/concourse_apple_watch.jpg" alt="An engineer's wrist with Apple Watch showing a live Concourse pipeline tile" />
+								<span>An engineer testing Concourse CI on their Apple Watch, 2018</span>
 							</div>
 						</div>
 					</section>
@@ -52,7 +60,7 @@
 						</header>
 						<div class="content">
 							<div class="headshot">
-								<img src="images/headshot.jpg" />
+								<img src="images/headshot.jpg" alt="Matthew Pereira Headshot" />
 								<!-- <span>Working from home, 2021.</span>  -->
 							</div>
 							<blockquote>I'm a product designer, researcher, and facilitator living in Toronto, Canada.</blockquote>
@@ -80,26 +88,6 @@
 							</ul>
 						</div>
 					</section>
-
-
-				<!-- Section -->
-				<!-- <section>
-					<header>
-						<h2>Work</h2>
-					</header>
-					<div class="content">
-						<p><strong>Etiam tristique libero</strong> eu nibh porttitor amet fermentum. Nullam venenatis erat id vehicula ultrices sed ultricies condimentum.</p>
-						<ul class="feature-icons">
-							<li class="icon solid fa-laptop">Consequat tempus</li>
-							<li class="icon solid fa-bolt">Etiam adipiscing</li>
-							<li class="icon solid fa-signal">Libero nullam</li>
-							<li class="icon solid fa-cog">Blandit condimentum</li>
-							<li class="icon solid fa-map-marker-alt">Lorem ipsum dolor</li>
-							<li class="icon solid fa-code">Nibh amet venenatis</li>
-						</ul>
-						<p>Vehicula ultrices sed ultricies condimentum. Magna sed etiam consequat, et lorem adipiscing sed nulla. Volutpat nisl et tempus et dolor libero, feugiat magna tempus, sed et lorem adipiscing.</p>
-					</div>
-				</section> -->
 
 				<!-- Section -->
 					<section>
@@ -130,27 +118,6 @@
 										</div>
 									</div>
 								</section>
-
-							<!-- Section -->
-								<!-- <section>
-									<header>
-										<h3><a href="fastboard.html">Concourse CI: Favorite Pipelines</a></h3>
-										<p>A design initiative focused on saving platform operators and engineers time, and reducing the number of repetitive tasks involved in day to day development and operation.</p>
-										<ul class="keywords">
-											<li>Lean Product</def></li>
-											<li>UX Research</li>
-											<li>Enterprise CI/CD</li>
-											<li>OSS</li>
-										</ul>
-										<p><a href="fastboard.html">View Case Study</a></p>
-										
-									</header>
-									<div class="content">
-										<div class="gallery">
-											<a href="fastboard.html" class="landscape left"><img src="images/fastboard-full.png" alt="" /></a>
-										</div>
-									</div>
-								</section> -->
 
 							<!-- Section -->
 								<section>
