Wording nitpick on index

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 							</div>
 							<div>
 								<img src="images/design-studio.jpg" alt="Matthew holding up a sharpie UI feature drawing over Zoom during a design studio" />
-								<span>Remote design studio facilitation during the first weeks of COVID, 2020</span>
+								<span>Matthew facilitating a remote design studio during the first weeks of COVID, 2020</span>
 							</div>
 							<div>
 								<img src="images/concourse_apple_watch.jpg" alt="An engineer's wrist with Apple Watch showing a live Concourse pipeline tile" />
