--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 							</div>
 							<div>
 								<img src="images/concourse_apple_watch.jpg" alt="An engineer's wrist with Apple Watch showing a live Concourse pipeline tile" />
-								<span>An platform engineer showing off Concourse CI on their Apple Watch during a research field study at a Pivotal customer's office, 2019</span>
+								<span>An platform engineer showing off Concourse on their Apple Watch during a customer field study, 2019</span>
 							</div>
 						</div>
 					</section>
