Update language in case study section

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 							<a id="casestudies" class="anchorLink"></a><h2>Case Studies</h2>
 						</header>
 						<div class="content">
-							<p><strong>For a full portfolio presentation,</strong> including information on my current initiatives and projects that cannot be displayed publically for confidentiality purposes, <a href="#contact" class="scrolly">please click here get in touch directly</a>.</p>
+							<p><strong>For a full portfolio presentation,</strong> including information about my current initiatives at VMware, <a href="#contact" class="scrolly">please click here get in touch directly</a>.</p>
 							<p>Below you can view a small selection of case studies I've worked on to learn more about my design process:</p>
 
 							<!-- Section -->
