Update language in fastboard case study

--- a/fastboard.html
+++ b/fastboard.html
@@ -48,7 +48,7 @@
 							</div>
 
 							<blockquote><a href="https://tanzu.vmware.com/concourse">Concourse CI</a> is a cloud-native, container-first, platform-agnostic tool lovingly crafted to serve the automation needs of developers the world over.</blockquote>
-							<p>The product lets engineers and businesses create automation pipelines that perform tasks in series and sequence, often with one pipeline triggering another based on its success or failure. Companies the world over have created pipelines for virtually everything that can be automated. We've seen pipelines for <strong>automatically scaling infrastructure around the globe to handle massive Black Friday sales</strong> running alongside pipelines for <strong>automatically ordering pizza for the office every Friday night</strong> in the same deployment.</p>
+							<p>The product lets engineers and businesses create automation pipelines that perform tasks in series or in parallel, often with one pipeline triggering another based on its success or failure. Companies the world over have created pipelines for virtually everything that can be automated. We've seen pipelines for <strong>automatically scaling infrastructure around the globe to handle massive Black Friday sales</strong> running alongside pipelines for <strong>automatically ordering pizza for the office every Friday night</strong> in the same deployment.</p>
 
 							<p>This product is used by everyone from single-developer startups to the most demanding multi-cloud global enterprises in the world, and they all have different needs and expectations. This makes developing new features a challenging task! Maintaining flexibility and performance for every deployment is difficult with so vast a landscape of users and use cases.</p>
 
