--- a/index.html
+++ b/index.html
@@ -48,7 +48,11 @@
 							</div>
 							<div>
 								<img src="images/concourse_apple_watch.jpg" alt="An engineer's wrist with Apple Watch showing a live Concourse pipeline tile" />
-								<span>An platform engineer showing off Concourse on their Apple Watch during a customer field study, 2019</span>
+								<span>A platform engineer showing off Concourse on their Apple Watch during a customer field study, 2019</span>
+							</div>
+							<div>
+								<img src="images/main_klc.jpg" alt="A child in a coding workshop showing off their new website" />
+								<span>Thank you notes from newly trained programmers at the end of a Girls Learning Code digital bootcamp, 2018</span>
 							</div>
 						</div>
 					</section>
