Update language on index

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 						<div class="heroArea cycle-slideshow" data-cycle-slides="div">
 							<div>
 								<img src="images/concourse_workshop.jpg" alt="An image of the Concourse development team in a conference workshop space" />
-								<span>Matthew hosting a CI/CD workshop w/ Concourse team + special guests at SpringOne Platform in Austin, TX, 2019</span>
+								<span>Matthew cohosting a CI/CD workshop w/ Concourse team + guests at SpringOne Platform in Austin, TX, 2019</span>
 							</div>
 							<div>
 								<img src="images/main_persona_crop.jpg" alt="A woman writing on a paper persona mockup during a workshop" />
