--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 							</div>
 							<div>
 								<img src="images/main_klc.jpg" alt="A child in a coding workshop showing off their new website" />
-								<span>Thank you notes from newly trained programmers at the end of a Girls Learning Code digital bootcamp, 2018</span>
+								<span>Thank-you notes from newly trained programmers at the end of a Girls Learning Code digital bootcamp, 2018</span>
 							</div>
 						</div>
 					</section>
