--- a/index.html
+++ b/index.html
@@ -69,12 +69,11 @@
 							</div>
 							<blockquote>I'm a product designer, researcher, and facilitator living in Toronto, Canada.</blockquote>
 							<br>
-							<p>I have a demonstrated history of user-centric design work on enterprise, B2B and B2C SAAS products, and I love working with multi-disciplinary teams. I've solved problems for companies ranging from small businesses to tech startups to some of the biggest and most demanding organizations on the planet.</p>
-							<p>I'm currently working at <strong><a href="https://vmware.com" target="_blank">VMware Inc.</a></strong> as <strong>Design Lead for the Application Operations program</strong>; the DevSecOps backbone of the <a href="https://tanzu.vmware.com/tanzu" target="_blank">VMware Tanzu portfolio</a> of projects.</p>
+							<p>I have a demonstrated history of user-centric design work on enterprise, B2B and B2C SaaS products, and I love working with multi-disciplinary teams. I've solved problems for companies ranging from small businesses to tech startups to some of the biggest and most demanding organizations on the planet.</p>
+							<p>I'm currently working in a Senior Product Designer II role at <strong><a href="https://auth0.com" target="_blank">Auth0</a></strong>. I work as the only designer in the Office to the CTO team, performing cutting edge research and experimental development in areas such as Privacy, Identity and Access Management, Fine Grained Authorization, and Workforce Governance and Administration.</p>
 							<a href="#" data-target="js_about" class="button large">Read More About Me</a>
 							<div class="about_more">
-								<p>My company's vision is to streamline the journey for enterprises around the world so that they can become fully modern, secure, and compliant digital businesses. By revolutionizing software development across the infrastructure, platform, service, and application levels, our customers can deliver better experiences to <em>their</em> customers, and empower their employees to do their best work faster than ever before.</p>
-								<p>I'm focused on cloud-native software delivery in the enterprise customer space. The product teams that I lead provide flexible infrastructure-as-a-service, reliable continuous integration and continuous delivery, compliant supply chain workflows, and a world-class developer experience for the world's most powerful companies.
+								<p>My company's vision is to solve identity and access managmement for everyone - from individual developers to the most complex and large-scale identity use cases for global enterprises. With our extensible and easy-to-integrate platform, Auth0 is already securing billions of logins every year, around the world.</p>
 								<p><strong>Within my company and the broader tech industry, I'm also passionate about facilitation practice, open source community development, design systems, diversity and inclusion, and accessibility.</strong></p>
 							</div>
 						</div>
@@ -99,7 +98,7 @@
 							<a id="casestudies" class="anchorLink"></a><h2>Case Studies</h2>
 						</header>
 						<div class="content">
-							<p><strong>For a full portfolio presentation,</strong> including information about my current initiatives at VMware, <a href="#contact" class="scrolly">please click here get in touch directly</a>.</p>
+							<p><strong>For a full portfolio presentation,</strong> including information about my current initiatives at Auth0, <a href="#contact" class="scrolly">please click here get in touch directly</a>.</p>
 							<p>Below you can view a small selection of case studies I've worked on to learn more about my design process:</p>
 
 							<!-- Section -->
