--- a/process.html
+++ b/process.html
@@ -40,7 +40,7 @@
 							<a id="about" class="anchorLink"></a><h2>Context</h2>
 						</header>
 						<div class="content">
-							<p>Working as a product designer at VMware requires utilizing a number of different craft skills, processes, and a toolkit of design patterns and best practices. Pivotal Software (acquired by VMware in 2020) championed an incredibly effective process that can be adapted to suit any project or need. This process is called <strong>Discovery and Framing</strong> (often abreviated as <strong>D&F</strong>) and can be represented by the double-diamond timeline diagram below.</p>
+							<p>Working as a product designer requires utilizing a number of different craft skills, processes, and a toolkit of design patterns and best practices. Pivotal Software (acquired by VMware in 2020) championed an incredibly effective process that can be adapted to suit any project or need. This process is called <strong>Discovery and Framing</strong> (often abreviated as <strong>D&F</strong>) and can be represented by the double-diamond timeline diagram below.</p>
 							<p>Discovery and Framing is a pattern used to define what the minimum viable product we want to build, and why. Going through this process is crucial for validating product requirements and assumptions to make sure that everything we build will be exceptionally valuable.</p>
 							<div class="gallery">
 								<a href="images/process-dnf-full.png" class="full fit"><img src="images/process-dnf-thumb.jpg" alt="" /></a>
