--- a/index.html
+++ b/index.html
@@ -67,10 +67,10 @@
 								<img src="images/headshot.jpg" alt="Matthew Pereira Headshot" />
 								<!-- <span>Working from home, 2021.</span>  -->
 							</div>
-							<blockquote>I'm a product designer, researcher, and facilitator living in Toronto, Canada.</blockquote>
+							<blockquote>I'm a product designer, researcher, and facilitator living in Halifax, Canada.</blockquote>
 							<br>
 							<p>I have a demonstrated history of user-centric design work on enterprise, B2B and B2C SaaS products, and I love working with multi-disciplinary teams. I've solved problems for companies ranging from small businesses to tech startups to some of the biggest and most demanding organizations on the planet.</p>
-							<p>I'm currently working in a Senior Product Designer II role at <strong><a href="https://auth0.com" target="_blank">Auth0</a></strong>. I work as the only designer in the Office to the CTO team, performing cutting edge research and experimental development in areas such as Privacy, Identity and Access Management, Fine Grained Authorization, and Workforce Governance and Administration.</p>
+							<p>I'm currently working in a Senior Product Designer II role at <strong><a href="https://auth0.com" target="_blank">Auth0</a></strong>. I joined the company to work as the only designer in the Office to the CTO team, performing cutting edge research and experimental development to figure out what was next for the internet. I'm now designing the end to end experience for Auth0's next big thing - <a href="https://fga.dev/">Auth0 Fine Grained Authorization</a>.</p>
 							<a href="#" data-target="js_about" class="button large">Read More About Me</a>
 							<div class="about_more">
 								<p>My company's vision is to solve identity and access managmement for everyone - from individual developers to the most complex and large-scale identity use cases for global enterprises. With our extensible and easy-to-integrate platform, Auth0 is already securing billions of logins every year, around the world.</p>
