Correct image caption

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       <div class="heroArea cycle-slideshow" data-cycle-slides="div">
         <div>
           <img src="images/main-cancun_workshop.jpg" alt="An image of Matthew in a conference workshop space" />
-          <span>Matthew in an offsite journey mapping session in Cancun, Mexico,
+          <span>Matthew in a user journey-mapping session for Okta in Cancun, Mexico,
             2023</span>
         </div>
         <div>
