about me correction

--- a/index.html
+++ b/index.html
@@ -93,11 +93,12 @@
         <p>I'm currently a Principal Product Designer at
           <strong><a href="https://okta.com" target="_blank">Okta</a></strong>,
           and a Design Lead for the SaaS Identity program. I'm responsible for
-          guiding three other designers, charting a course to improve the
-          experience for B2B and Enterprise customers throughout our product
-          landscape. Sometimes this means extending existing functionality, and
-          at other times it means creating entirely new features - but the
-          challenges are always complex, technical, and exciting to solve.
+          guiding a team of 18 designers and 4 researchers, charting a course
+          to improve the experience for B2B and Enterprise customers throughout
+          our product landscape. Sometimes this means extending existing
+          functionality, and at other times it means creating entirely new
+          features - but the challenges are always complex, technical, and
+          exciting to solve.
         </p>
         <a href="#" data-target="js_about" class="button large">Read More About Me</a>
         <div class="about_more">
