--- a/index.html
+++ b/index.html
@@ -85,44 +85,30 @@
         <blockquote>I'm a product designer, researcher, and facilitator living
           in Halifax, Canada.</blockquote>
         <br>
-        <p>I have a demonstrated history of user-centric design work on
-          enterprise, B2B and B2C SaaS products, and I love working with multi-
-          disciplinary teams. I've solved problems for companies ranging from
-          small businesses to tech startups, to some of the biggest and most
-          demanding organizations on the planet.</p>
-        <p>I'm currently a Principal Product Designer at
-          <strong><a href="https://okta.com" target="_blank">Okta</a></strong>,
-          and a Design Lead for the SaaS Identity program. I'm responsible for
-          guiding a team of 18 designers and 4 researchers, charting a course
-          to improve the experience for B2B and Enterprise customers throughout
-          our product landscape. Sometimes this means extending existing
-          functionality, and at other times it means creating entirely new
-          features - but the challenges are always complex, technical, and
-          exciting to solve.
-        </p>
+        <p>I have a demonstrated history of user-centric design work on enterprise, B2B and B2C SaaS products, and I
+          love working with multi- disciplinary teams. I've solved problems for companies ranging from small businesses
+          to tech startups, to some of the biggest and most demanding organizations on the planet.</p>
+        <p>I'm currently a Principal Product Designer at <strong><a href="https://okta.com" target="_blank">Okta</ a>
+              </ strong>, and a Design Lead for the SaaS Identity program. I'm responsible for guiding a team of 18
+              designers and 4 researchers, charting a course to improve the experience for B2B and Enterprise customers
+              throughout our product landscape. Sometimes this means extending existing functionality, and at other
+              times it means creating entirely new features - but the challenges are always complex, technical, and
+              exciting to solve. </p>
         <a href="#" data-target="js_about" class="button large">Read More About Me</a>
         <div class="about_more">
-          <p>I originally joined Auth0 in 2021 to lead design efforts for their
-            new initiatives team, called
-            <strong><a href="https://lab.auth0.com/" target="_blank">Auth0 Lab</a></strong>.
-            This team was charged with
-            figuring out what was next for the internet, and finding the company's
-            next major product opportunities. Building upon that work, when Okta
-            acquired Auth0 I designed the end to end experience for the highly
-            anticipated authorization products
-            <strong><a href="https://fga.dev/">Auth0 Fine Grained Authorization</a></strong> and <strong><a
-                href="https://openfga.dev/" target="_blank">OpenFGA</a></strong>.
-          </p>
-          <p>My company's vision is to solve identity and access managmement for
-            everyone - from individual developers and hobby engineers to the
-            most complex and large-scale identity use cases for global
-            enterprises. With our extensible and easy-to-integrate platform,
-            Okta's Customer Identity Cloud is already securing billions of
+          <p>I originally joined Auth0 in 2021 to lead design efforts for their new initiatives team, called <strong><a
+                href="https://lab.auth0.com/" target="_blank">Auth0 Lab</a></strong>. This team was charged with
+            figuring out what was next for the internet, and finding the company's next major product opportunities.
+            Building upon that work, when Okta acquired Auth0 I designed the end to end experience for the highly
+            anticipated and award winning authorization products <strong><a href="https:// fga.dev/">Auth0 Fine Grained
+                Authorization</a></strong> and <strong><a href="https://openfga.dev/" target="_blank">OpenFGA</a></
+                strong>.</p>
+          <p>My company's vision is to solve identity and access management for everyone - from individual developers
+            and hobby engineers to the most complex and large-scale identity use cases for global enterprises. With our
+            extensible and easy-to-integrate platform, Okta's Customer Identity Cloud is already securing billions of
             logins every year, around the world.</p>
-          <p><strong>Within my company and the broader tech industry, I'm also
-              passionate about facilitation practice, open source community
-              development, design systems, diversity and inclusion, and
-              accessibility.</strong>
+          <p><strong>Within my company and the broader tech industry, I'm also passionate about facilitation practice,
+              open source community development, design systems, diversity and inclusion, and accessibility.</strong>
           </p>
         </div>
       </div>
